# dsv

./: .clang-format  .gitignore  CMakeLists.txt
src/: application.cpp  application.h  main.cpp
src/controller/: controller.cpp  controller.h
src/model/: model.h
src/ui/: colors.h  ui.cpp  ui.h
src/ui/primitives/: base.h  button.h
src/view/: view.h
